Fixing items alignment

--- a/css/style.css
+++ b/css/style.css
@@ -87,10 +87,16 @@ a:focus {
   margin-top: 25px;
 }
 .items .img {
-  height: 125px;
+  height: 185px;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
+}
+.items .title {
+  margin-bottom: 0px;
+}
+.items .price {
+  margin-bottom: 20px;
 }
 .walnut-speaker {
   background-image: url(https://firebasestorage.googleapis.com/v0/b/production2hats.appspot.com/o/studentPortal%2Fassessment-web-design%2Fwalnut_speakers.png?alt=media&token=d93fffb6-934f-4e5b-894f-53dd76f12758);
